added css style sheet

--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
+<head>
+  <link rel="stylesheet" href="practice.css">
+</head>
 <title>Krisyah Taylynne's Profile</title>
-
-<body>
+<body bgcolor=#c574cc>
   <h1><em>Krisyah Taylynne</em><h1>
 <img src="krisyah.jpg" width="340" height="470" alt="Photo of Krisyah Taylynne">
 
-<style>
-body {
-  background-color: #ffcccc
-}
-</style>
 
-<h2><em>Summary</em></h2>
+<h2> Summary </h2>
 <p>I live in Atlanta, Georgia. I like learning, shopping, and dancing.</p>
 
 <h2><em>Hometown</em></h2>Atlanta, Georgia
